css/style.css
/* ... */
.main-navbar ul{
    top: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    right: -100vw;
    list-style: none;
    text-align: center;
    transition: right 0.8s ease-in-out;
    display: flex;
    padding-top: 0;
    position: initial;
    align-items: center;
    justify-content: flex-end;
    background-color: transparent;
}

.toggle ul{
    right: 0;
    gap:10px;
}

.main-navbar ul li a{
    color:var(--black);
    display: inline-block;
    margin-left:20px;
    font-family: "Montserrat", sans-serif;
    font-size: 1.1rem;
}

.main-navbar ul li a:hover {
    color: var(--white);
}

.contactme-button .btn-hover-effect .text {
    width: 130px;
}

.main-navbar .menu{
    flex-grow: 0;
    width: auto;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: auto; 
    position: relative;
    display: none;
}

body.menu-open {
    overflow: hidden;
}

.main-navbar .menu img{
    width: 40px;
    height: 40px;
    z-index: 10001;
    transition: right 0.8s ease-in-out;
    cursor: pointer;
    margin-top:15px;
}

.main-navbar .menu img:last-child{
    opacity: 0;
    margin-right:20px;
}

.main-navbar .toggle .menu img:first-child{
    opacity: 0;
}

.main-navbar .toggle .menu img:last-child{
    opacity: 1;
}

.menu .main-navbar ul{
    color: #fff !important;
    font-size: 3.5rem;
    text-decoration: none;
    font-family: 'League Gothic', sans-serif;
    text-transform: uppercase;
}

.main-navbar .menu ul li a{
    color:var(--black);
    display: block;
    font-size: var(--body-medium);
    text-decoration: none;
    font-family: "Montserrat", sans-serif;
    transition: color 0.4s ease;
}

.contactme-button .btn-hover-effect {
    width: 125px;
}

.contactme-button .btn-hover-effect .text {
    width: 125px;
}

.main-navbar.menu-is-open {
    backdrop-filter: none !important;
    -webkit-backdrop-filter: none !important;
    mask-image: none !important;
    -webkit-mask-image: none !important;
    background-color: transparent !important;
    transition: none !important; 
}



/* =========== HEADER ===========*/

header{
    height: 100vh;
    padding:0 120px;
    background-color: var(--white);
}

.header-video{
    position: absolute;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
    width: 100%;
    height:100%;
    object-fit: cover; 
}

.header-lottie-wrapper {
    display:none;
}

#header-lottie-mobile {
    display:none; 
    width:100%; 
    height:100%; 
    position:absolute; 
    top:0; 
    left:0;
}

header .heading{
    max-width: 100vh;
    padding-top:150px;
    position:absolute;
    overflow: hidden;
    display:flex;
    flex-direction: column;
    justify-content: space-between;
}

.heading h1{
    font-size: var(--h1-size);
    color:var(--white);
    max-width:900px;
    line-height: 0.85;
    margin-bottom:25px;
}

.heading p.p1{
    font-size: 1.5rem;
    color:var(--white);
    font-weight:300;	
    margin-bottom:0;
    padding: 7px 20px;
    border-radius: 4px;
    background-color:rgb(137, 123, 150);;
    display: inline;
    transition: none !important;
    
}

.heading p.p2{
    font-size:var(--body-medium);
    color:var(--white);
    margin-bottom:5px;
    line-height:30px ;
    margin-left:560px;
    font-weight:200;	
    width:260px;
}

.heading h1 span, 
.heading .p1 span, 
.heading .p2 span{
    display:inline-block ;
}



/* =========== SECTION1 ===========*/

.section1{
    background-image: url('../images/homepage-section1.png');
    background-size: cover;
    height:1300px;
    padding: var(--layout-grid-column);
    overflow: hidden;
    margin: 0;
    position: relative;
    z-index: 2;
}

.section1 h2{
    color:var(--black);
    font-size: var(--h2-size);
    width: 100%;
    max-width: 600px;
    line-height: 0.9;
}

.section1 h2 span{
    display: inline-block !important;
    opacity: 0;
}


/* ===custom-grid===*/
.custom-grid {
    position: absolute;
    top: 0; 
    left: 0; 
    width: 100%; 
    height: 100%;
    pointer-events: none; 
    z-index: 1;
}

.custom-grid div {
    position: absolute;
    background-color: var(--light-purple);
    opacity: 0.6;
    transform: scale(0); 
}

.reveal-h2 .line, .reveal-p1-right, .reveal-p-left, .reveal-p2-right {
    display: block;
    overflow: hidden;
}

.reveal-h2 span, .reveal-p1-right span, .reveal-p-left span, .reveal-p2-right span {
    display: inline-block;
    opacity:0;
    opacity: 0;
}

.custom-grid .v-line {
    width: 1px;
    height: 100%;
    top: 0;
    transform-origin: top; 
    transition: transform 0.1s linear;
}

.custom-grid .h-line {
    height: 1px;
    width: 100%;
    left: 0;
    transform-origin: left; 
    transition: transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.v-line {
    transform: scaleY(0);
    transform-origin: top;
}

@keyframes drawHorizontal {
    from { transform: scaleX(0); }
    to { transform: scaleX(1); }
}

@keyframes drawVertical {
    from { transform: scaleY(0); }
    to { transform: scaleY(1); }
}

.section1 .custom-grid .v-50 { 
    left: 40%; 
    transform-origin: top;
    transform: scaleY(0);
}

.section1 .custom-grid .h-33 { 
    top: 50%; 
}

.section1 .custom-grid .h-66 { 
    top: 79%; 
}

.section1 .left-side{
    float:left;
    width:40%;
    margin-top:420px;
}

.section1 .right-side{
    float:right;
    width:60%;
    padding-left:5%;
    margin-top:150px;
}

.section1 .p-left-side{
    width:85%;
}

.section1 .right-side .p1-right-side{
    width:50%;
}

.section1 .right-side .p2-right-side{
    width:50%;
    margin-top:490px;
}



/* =========== SECTION2 ===========*/

.section2{
    background-image: url('../images/Selected-projects-background.png');
    background-size: cover;
    height:2800px;
    overflow: hidden;
    margin: 0;
    position: relative;
    z-index: 1;
    padding: 120px;
}
/* ... */

